<resources>

    //Login Activity
    <string name="app_name">Parlay</string>
    <string name="login_et_email_address">E-Mail Address</string>
    <string name="login_et_password">Password</string>
    <string name="login_btn_login">Login</string>
    <string name="login_tv_need_help">Need Help?</string>
    <string name="login_tv_first_time">First Time User?</string>
    <string name="login_tv_register">Click Here To Register</string>
    <string name="login_description_parlay_logo">Parlay P Logo</string>

    //User Home Activity
    <string name="title_activity_user_home">MainActivity</string>
    <string name="title_my_bets">My Bets</string>
    <string name="title_performance">Performance</string>
    <string name="title_search">Search</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_notifications">Notifications</string>

    //Register Activity
    <string name="register_tv_title_register">Register</string>
    <string name="register_et_first_name">First Name</string>
    <string name="register_et_last_name">Last Name</string>
    <string name="register_et_phone_number">Phone Number</string>
    <string name="register_et_email">E-Mail Address</string>
    <string name="register_et_password">Password</string>
    <string name="register_et_confirm_password">Confirm Password</string>
    <string name="register_btn_register_user">Register New User</string>
    <string name="register_iv_left_arrow_white">Left-facing white arrow</string>

</resources>