<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_my_bets"
        android:icon="@drawable/icons8_chip_24"
        android:title="@string/title_my_bets" />

    <item
        android:id="@+id/navigation_performance"
        android:icon="@drawable/icons8_increase_24"
        android:title="@string/title_performance" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/icons8_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_watchlist"
        android:icon="@drawable/icons8_star_filled_24"
        android:title="@string/title_watchlist" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/icons8_notification_24"
        android:title="@string/title_notifications" />

</menu>