<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_bets">

    <fragment
        android:id="@+id/navigation_my_bets"
        android:name="com.example.parlay.ui.mybets.MyBetsFragment"
        android:label="@string/title_my_bets"
        tools:layout="@layout/fragment_my_bets" />

    <fragment
        android:id="@+id/navigation_performance"
        android:name="com.example.parlay.ui.performance.PerformanceFragment"
        android:label="@string/title_performance"
        tools:layout="@layout/fragment_performance" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.parlay.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="com.example.parlay.ui.watchlist.WatchlistFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watchlist" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.parlay.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>