<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".auth.RegisterActivity">

    <ImageView
        android:id="@+id/register_iv_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/register_iv_left_arrow_white"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="@id/register_tv_register_title"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/register_tv_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/register_tv_title_register"
        android:textAlignment="center"
        android:textColor="#023859"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/register_linear_layout_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/register_linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/register_et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/register_et_first_name"
            android:autofillHints="@string/register_et_first_name"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/register_et_last_name"
            android:autofillHints="@string/register_et_last_name"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_et_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/register_et_phone_number"
            android:autofillHints="@string/register_et_phone_number"
            android:inputType="phone"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/register_et_email"
            android:autofillHints="@string/register_et_email"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/register_et_password"
            android:autofillHints="@string/register_et_password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/register_et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/register_et_confirm_password"
            android:autofillHints="@string/register_et_confirm_password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/register_btn_register_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@drawable/login_btn"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_btn_register_user"
            android:textAllCaps="false"
            android:textColor="#023859"
            android:textSize="20sp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>