<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="229dp"
        android:layout_height="224dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/login_description_parlay_logo"
        android:src="@drawable/parlay_logo_dark2"
        app:layout_constraintBottom_toTopOf="@id/login_et_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/login_et_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/round_edittext"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:hint="@string/login_et_email_address"
        android:autofillHints="@string/login_et_email_address"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/round_edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/login_et_password"
        android:autofillHints="@string/login_et_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/login_et_password"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/login_et_password"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_btn"
        android:text="@string/login_btn_login"
        android:textAllCaps="false"
        android:textColor="#023859"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/login_et_password"
        app:layout_constraintStart_toStartOf="@id/guideline2"/>

    <TextView
        android:id="@+id/login_tv_help_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/login_tv_need_help"
        android:textColor="#023859"
        android:textSize="17sp"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@id/login_btn_login"
        app:layout_constraintBottom_toBottomOf="@id/login_btn_login"/>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/login_tv_first_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_first_time"
            android:textColor="#FFFFFF"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/login_tv_register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/login_tv_register"
            android:textColor="#05AFF2"
            android:textSize="17sp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>